--- a/default.html
+++ b/default.html
@@ -3,16 +3,17 @@
 <head>
 <meta name="viewport" content="width=device-width , initial-scale=1.0">
 <meta charset="utf-8">
-<title>Omer Aydemir's Personal Website | Home</title>
+<title>Omer Aydemir's Personal Portfolio</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/
 font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
  crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<!-----------------------Navigation Bar---------------------------------------------->
+
+	<!-----------------------Navigation Bar---------------------------------------------->
 	<header>
-		<a href="#" class="logo">Aydemir</a>
+		<a href="#home" class="logo">Aydemir</a>
 		<div class="toggle" onclick="toggleMenu();"></div>
 		<ul class="menu">
 			<li><a href="#home" onclick="toggleMenu();">Home</a></li>
@@ -22,11 +23,11 @@ font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxC
 			<li><a href="#contact" onclick="toggleMenu();">Contact</a></li>
 		</ul>
 	</header>
-<!-----------------------Opener Text ------------------------------------------------>
+<!-----------------------Opener Text Area------------------------------------------------>
 	<section class="banner" id="home">
-		<div class="textBx">
-			<h2>Hello, I'm<br><span>Omer Aydemir.</span></h2>
-			<h3>I'm a Software Developer & Designer</h3>
+		<div class="textBox">
+			<h2>Hello, I'm<br><span>Omer Aydemir</span></h2>
+			<h3>Software Developer & Designer</h3>
 			<a href="#about" class="btn">About Me</a>
 		</div>
 	
@@ -83,6 +84,8 @@ font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxC
 			</div>
 		</div>
 	</section>
+
+
 <!-----------------------Latest Events---------------------------------------------->
 	<section class="work" id="events">
 		<div class="heading">
